<resources>
    <string name="app_name">gallery</string>
    <string name="button_Snap">Snap</string>
    <string name="button_Left">Left</string>
    <string name="button_Right">Right</string>
    <string name="button_Filter">Filter</string>
    <string name="button_Upload">Upload</string>
    <string name="editText_Caption">Enter image caption.</string>
    <string name="button_Cancel">Cancel</string>
    <string name="button_Search">Search</string>
    <string name="editText_Edate">YYYYMMDD</string>
    <string name="textView_Sdate">Start Date</string>
    <string name="textView_Edate">End Date</string>
    <string name="textView_Caption">Caption</string>
    <string name="editText_Sdate">YYYYMMDD</string>
    <string name="displayImageView_Photo">Photo</string>
    <string name="bottom_right_bound">Bottom Right Bound</string>
    <string name="lat">Lat</string>
    <string name="top_left_bound">Top Left Bound</string>
    <string name="longText">Long</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>