<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Filter">

    <EditText
        android:id="@+id/TopLeftLong"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Long"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/captionText" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="Bottom Right Bound"
        app:layout_constraintBottom_toBottomOf="@+id/BottomRightLat"
        app:layout_constraintEnd_toStartOf="@+id/BottomRightLat"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/BottomRightLat"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Lat"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/BottomRightLong"
        app:layout_constraintEnd_toStartOf="@+id/BottomRightLong"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TopLeftLat" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="104dp"
        android:layout_height="49dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:onClick="cancel"
        android:text="@string/button_Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BottomRightLong" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/button_Search"
        app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/captionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editText_Caption"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endDateText" />

    <EditText
        android:id="@+id/captionText2"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="City"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.559" />

    <EditText
        android:id="@+id/captionText3"
        android:layout_width="157dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Search Radius(km)"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.528" />

    <EditText
        android:id="@+id/startDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editText_Sdate"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/endDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editText_Edate"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateText" />

    <EditText
        android:id="@+id/BottomRightLong"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Long"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/TopLeftLong"
        app:layout_constraintTop_toBottomOf="@+id/TopLeftLong" />

    <EditText
        android:id="@+id/TopLeftLat"
        android:layout_width="80dp"
        android:layout_height="55dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:hint="Lat"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/TopLeftLong"
        app:layout_constraintEnd_toStartOf="@+id/TopLeftLong"
        app:layout_constraintHorizontal_bias="0.291"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="16dp"
        android:text="Top Left Bound"
        app:layout_constraintBottom_toBottomOf="@+id/TopLeftLat"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textView_Caption"
        app:layout_constraintBottom_toBottomOf="@+id/captionText"
        app:layout_constraintEnd_toStartOf="@+id/captionText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textView_Sdate"
        app:layout_constraintBottom_toBottomOf="@+id/startDateText"
        app:layout_constraintEnd_toStartOf="@+id/startDateText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/textView_Edate"
        app:layout_constraintBottom_toBottomOf="@+id/endDateText"
        app:layout_constraintEnd_toStartOf="@+id/endDateText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BottomRightLat"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="7dp"
        android:layout_height="13dp"
        android:text="and"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.348" />

</androidx.constraintlayout.widget.ConstraintLayout>